make generic filter and include adoption status
